# KeyMaster

./: Cargo.toml  README.md  data.json  madness  settings.json
assets/sprites/: BlueKey.aseprite  PurpleKey.aseprite  RedKey.aseprite  WhiteKey.aseprite  YellowKey.aseprite
songs/: Bad Apple.rar  Cancer.rar  Spear of justice - Toby Fox.rar  Top Secret.rar
songs/Bad Apple/: data.json
songs/Blinding Lights - The weeknd/: data.json
songs/Bohemian Rhapsody/: data.json
songs/Can't stop- Red hot chilli peppers/: data.json
songs/Cancer/: data.json
songs/Cancion para mapuche/: data.json
songs/Capital Cities - Kangaroo Court/: data.json
songs/Chop Suey! - System of a Down/: data.json
songs/Descent into cerberon/: audio.mp3.import  data.json
songs/In the end - Linking Park/: data.json
songs/Montero/: data.json
songs/Night of nights/: audio.mp3.import  data.json
songs/Numb - Linking Park/: data.json
songs/Paint it, Black - The Rolling Stones/: data.json
songs/Red bleeding petals (Guitar) - KhalzDev/: data.json
songs/Running in the 90s/: data.json
songs/Snake/: data.json
songs/Spear of justice - Toby Fox/: data.json
songs/Standing Next To You (IA)/: data.json
songs/Top Secret/: data.json
songs/Toxicity/: data.json
songs/Toxicity - System of a Down/: data.json
songs/Troopers of the stars - Dragonforce/: audio.mp3.import  data.json
songs/Versus - Ultrakill/: data.json
songs/a test/: data.json
songs/bury the skbidi - copia/: data.json
songs/cancionsuela/: data.json
src/: app.rs  game_object.rs  key.rs  load_song.rs  main.rs
(+28 files in other folders)
