[package]
name = "arrownier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
sdl2 = {version = "*", default-features = false, features = ["ttf", "image", "mixer", "unsafe_textures"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
kira = "0.8.4"
rand = "0.8"
rustfft = "*"
cpal = "*"
rodio = "0.15"
tokio = "*"